--- a/app/templates/search/all-types.hbs
+++ b/app/templates/search/all-types.hbs
@@ -33,7 +33,7 @@
               @shortTitle={{row.data.highlight.shortTitle}}
               @title={{row.data.highlight.title}}
               @caseId={{row.data.id}}
-              @isArchived={{row.data.attributes.isArchived}}
+              @isArchived={{row.data.attributes.closedDate}}
               @subcaseHighlights={{row.data.subcaseHighlights}}
             />
           {{/if}}
