--- a/app/templates/search/cases.hbs
+++ b/app/templates/search/cases.hbs
@@ -59,7 +59,7 @@
             @shortTitle={{row.highlight.shortTitle}}
             @title={{row.highlight.title}}
             @caseId={{row.id}}
-            @isArchived={{row.attributes.isArchived}}
+            @isArchived={{row.attributes.closedDate}}
             @subcaseHighlights={{row.subcaseHighlights}}
           />
         </td>
