Created filter on reports or minutes to create list for marked signflows

--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -48,6 +48,7 @@
       {{#if this.onCreateNewVersion.isIdle}}
         <Documents::DocumentCard
           @piece={{this.report}}
+          @decisionActivity={{@decisionActivity}}
           @isEditable={{true}}
           @agendaContext={{@agendaContext}}
           @hideNewerVersions={{true}}
